--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-31 20:19+0800\n"
+"POT-Creation-Date: 2022-06-01 08:00+0800\n"
 "PO-Revision-Date: 2022-05-31 20:35+0800\n"
 "Last-Translator: Alen <neithern@outlook.com>\n"
 "Language-Team: Chinese (simplified)\n"
@@ -167,3 +167,7 @@ msgstr "未知专辑"
 #: src/song-store.vala:3
 msgid "Unknown Aritst"
 msgstr "未知艺术家"
+
+#: src/window.vala:78
+msgid "Loading..."
+msgstr "正在加载…"
