--- a/po/ru.po
+++ b/po/ru.po
@@ -1,14 +1,14 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# David Lapshin <ddaudix@gmail.com>, 2022.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-06-12 19:17+0800\n"
+"POT-Creation-Date: 2022-06-14 20:25+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: @daudix-UFO\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -85,17 +85,17 @@ msgstr "Воспроизведение"
 #: src/gtk/help-overlay.ui:31
 msgctxt "shortcut window"
 msgid "Play/Pause"
-msgstr ""
+msgstr "Воспроизведение/Пауза"
 
 #: src/gtk/help-overlay.ui:37
 msgctxt "shortcut window"
 msgid "Play Next"
-msgstr ""
+msgstr "Играть следующее"
 
 #: src/gtk/help-overlay.ui:43
 msgctxt "shortcut window"
 msgid "Play Previous"
-msgstr ""
+msgstr "Играть предыдущее"
 
 #: src/gtk/help-overlay.ui:51
 msgctxt "shortcut window"
