--- a/po/template.pot
+++ b/po/template.pot
@@ -168,7 +168,7 @@ msgid "Shuffle"
 msgstr ""
 
 #: src/application.vala:321
-msgid "A fast, flurent, light weight music player written in GTK4."
+msgid "A fast, fluent, light weight music player written in GTK4."
 msgstr ""
 
 #: src/play-bar.vala:75
