fix "Unknown Artist" typo

--- a/po/es.po
+++ b/po/es.po
@@ -209,7 +209,7 @@ msgid "Unknown Album"
 msgstr "Album desconocido"
 
 #: src/song.vala:3
-msgid "Unknown Aritst"
+msgid "Unknown Artist"
 msgstr "Artista Desconocido"
 
 #: src/window.vala:49
