--- a/po/ru.po
+++ b/po/ru.po
@@ -209,7 +209,7 @@ msgid "Unknown Album"
 msgstr "Неизвестный альбом"
 
 #: src/song.vala:3
-msgid "Unknown Aritst"
+msgid "Unknown Artist"
 msgstr "Неизвестный артист"
 
 #: src/window.vala:49
