--- a/po/tr.po
+++ b/po/tr.po
@@ -213,7 +213,7 @@ msgid "Unknown Album"
 msgstr "Bilinmeyen Albüm"
 
 #: src/song.vala:3
-msgid "Unknown Aritst"
+msgid "Unknown Artist"
 msgstr "Bilinmeyen Sanatçı"
 
 #: src/window.vala:49
