--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -249,7 +249,7 @@ msgid "Unknown Artist"
 msgstr "未知艺术家"
 
 #: src/song-entry.vala:104
-msgid "Move to Next"
+msgid "Play at Next"
 msgstr "插播"
 
 #: src/song-entry.vala:105
