--- a/po/et.po
+++ b/po/et.po
@@ -153,7 +153,7 @@ msgid "_Export Cover"
 msgstr "_Ekspordi loo pilt"
 
 #: src/gtk/window.ui:217 src/song-entry.vala:101
-msgid "_Show In Files"
+msgid "_Show in Files"
 msgstr "_Kuva failides"
 
 #: src/gtk/window.ui:226
