--- a/po/ru.po
+++ b/po/ru.po
@@ -161,7 +161,7 @@ msgid "_Export Cover"
 msgstr "_Экспортировать обложку"
 
 #: src/gtk/window.ui:217 src/song-entry.vala:101
-msgid "_Show In Files"
+msgid "_Show in Files"
 msgstr "_Показать в файлах"
 
 #: src/gtk/window.ui:226
