--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -161,7 +161,7 @@ msgid "_Export Cover"
 msgstr "导出封面(_E)"
 
 #: src/gtk/window.ui:217 src/song-entry.vala:107
-msgid "_Show In Files"
+msgid "_Show in Files"
 msgstr "定位文件(_S)"
 
 #: src/gtk/window.ui:226
