--- a/po/it.po
+++ b/po/it.po
@@ -177,8 +177,8 @@ msgid "_Keyboard Shortcuts"
 msgstr "_Scorciatoie da tastiera"
 
 #: src/gtk/window.ui:240
-msgid "_About G4Music"
-msgstr "_Informazioni su G4Music"
+msgid "_About"
+msgstr "_Informazioni"
 
 #: src/gtk/window.ui:250
 msgid "By Album"
