--- a/po/nl.po
+++ b/po/nl.po
@@ -168,8 +168,8 @@ msgid "_Keyboard Shortcuts"
 msgstr "_Sneltoetsen"
 
 #: src/gtk/window.ui:240
-msgid "_About G4Music"
-msgstr "_Over G4Music"
+msgid "_About"
+msgstr "_Over"
 
 #: src/gtk/window.ui:250
 msgid "By Album"
