--- a/po/oc.po
+++ b/po/oc.po
@@ -178,8 +178,8 @@ msgid "_Keyboard Shortcuts"
 msgstr "_Acorchis de clavièr"
 
 #: src/gtk/window.ui:240
-msgid "_About G4Music"
-msgstr "_A prepaus de G4Music"
+msgid "_About"
+msgstr "_A prepaus de"
 
 #: src/gtk/window.ui:250
 msgid "By Album"
