--- a/po/ru.po
+++ b/po/ru.po
@@ -177,7 +177,7 @@ msgid "_Keyboard Shortcuts"
 msgstr "_Комбинации клавиш"
 
 #: src/gtk/window.ui:240
-msgid "_About G4Music"
+msgid "_About"
 msgstr "_О G4Music"
 
 #: src/gtk/window.ui:250
