--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3,24 +3,27 @@
 # Copyright (C) 2022 THE g4music'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the g package.
 # Julian <s9209122222@gmail.com>, 2022.
+# Nanling <neithern@outlook.com>, 2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-17 14:05+0800\n"
-"PO-Revision-Date: 2022-08-03 11:45+0800\n"
-"Last-Translator: Julian <s9209122222@gmail.com>\n"
-"Language-Team: Chinese (Traditional)\n"
-"Language: zh_TW\n"
+"POT-Creation-Date: 2023-04-09 11:56+0800\n"
+"PO-Revision-Date: 2023-04-09 11:58+0800\n"
+"Last-Translator: Nanling <neithern@outlook.com>\n"
+"Language-Team: Chinese - China <i18n-zh@googlegroups.com>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0\n"
+"X-Generator: Gtranslator 42.0\n"
 
-#: data/app.desktop.in:3 src/gtk/window.ui:5 src/application.vala:412
+#: data/app.desktop.in:3 src/gtk/window.ui:5 src/application.vala:415
 #: src/main.vala:24
 msgid "G4Music"
-msgstr "G4Music"
+msgstr "G4音樂"
 
 #: data/app.desktop.in:4
 msgid "Music Player"
@@ -116,7 +119,7 @@ msgstr "可能會導致速度減慢與增加網路使用"
 msgid "Playback"
 msgstr "播放"
 
-#: src/gtk/preferences.ui:64 src/application.vala:405
+#: src/gtk/preferences.ui:64 src/application.vala:408
 msgid "Keep playing after window closed"
 msgstr "關閉視窗後繼續播放"
 
@@ -164,7 +167,7 @@ msgstr "輸出封面(_E)"
 msgid "Show _Cover File"
 msgstr "顯示封面檔案(_C)"
 
-#: src/gtk/window.ui:223 src/music-entry.vala:113
+#: src/gtk/window.ui:223 src/ui/music-entry.vala:113
 msgid "_Show Music File"
 msgstr "顯示音樂檔案(_S)"
 
@@ -204,74 +207,78 @@ msgstr "依日期"
 msgid "Shuffle"
 msgstr "亂序播放"
 
-#: src/application.vala:413
+#: src/application.vala:416
 msgid "A fast, fluent, light weight music player written in GTK4."
 msgstr "一個快速、流暢、輕量，基於 GTK4 的音樂播放軟體。"
 
-#: src/application.vala:415
+#: src/application.vala:418
 msgid "translator-credits"
 msgstr "Julian"
 
-#: src/application.vala:594
+#: src/application.vala:613
 msgid "Keep playing"
 msgstr "持續播放"
 
-#: src/play-bar.vala:83
-msgid "Repeat Music"
-msgstr "單曲循環"
-
-#: src/play-bar.vala:93
-msgid "Play Previous"
-msgstr "播放上一首"
-
-#: src/play-bar.vala:99
-msgid "Play/Pause"
-msgstr "播放/暫停"
-
-#: src/play-bar.vala:106
-msgid "Play Next"
-msgstr "播放下一首"
-
-#: src/preferences.vala:71
-msgid "Always"
-msgstr "總是"
-
-#: src/preferences.vala:73
-msgid "Art Only"
-msgstr "僅封面"
-
-#: src/preferences.vala:75
-msgid "Never"
-msgstr "從不"
-
-#: src/music.vala:2
-msgid "Unknown Album"
-msgstr "未知專輯"
-
-#: src/music.vala:3
-msgid "Unknown Artist"
-msgstr "未知藝術家"
-
-#: src/music-entry.vala:110
+#: src/ui/music-entry.vala:110
 msgid "Play at Next"
 msgstr "插播"
 
-#: src/music-entry.vala:111
+#: src/ui/music-entry.vala:111
 msgid "Show Album"
 msgstr "顯示專輯"
 
-#: src/music-entry.vala:112
+#: src/ui/music-entry.vala:112
 msgid "Show Artist"
 msgstr "顯示藝術家"
 
-#: src/window.vala:54
+#: src/ui/play-bar.vala:83
+msgid "Repeat Music"
+msgstr "單曲循環"
+
+#: src/ui/play-bar.vala:93
+msgid "Play Previous"
+msgstr "播放上一首"
+
+#: src/ui/play-bar.vala:99
+msgid "Play/Pause"
+msgstr "播放/暫停"
+
+#: src/ui/play-bar.vala:106
+msgid "Play Next"
+msgstr "播放下一首"
+
+#: src/ui/preferences.vala:71
+msgid "Always"
+msgstr "總是"
+
+#: src/ui/preferences.vala:73
+msgid "Art Only"
+msgstr "僅封面"
+
+#: src/ui/preferences.vala:75
+msgid "Never"
+msgstr "從不"
+
+#: src/ui/volume-button.vala:32
+msgid "Volume: "
+msgstr "音量："
+
+#: src/ui/window.vala:54
 msgid "Loading..."
 msgstr "正在載入…"
 
-#: src/window.vala:277
+#: src/ui/window.vala:292
 msgid ""
 "Drag and drop music files here,\n"
 "or change music location: "
 msgstr ""
 "將音樂拖曳至這裡，\n"
 "或者修改音樂庫位置："
+
+#: src/utils/music.vala:2
+msgid "Unknown Album"
+msgstr "未知專輯"
+
+#: src/utils/music.vala:3
+msgid "Unknown Artist"
+msgstr "未知藝術家"
