--- a/po/sv.po
+++ b/po/sv.po
@@ -117,7 +117,7 @@ msgid "Enable gapless playback"
 msgstr ""
 
 #: src/gtk/preferences.ui:91
-msgid "Use ReplayGain to normalize volume"
+msgid "Normalize volume with ReplayGain"
 msgstr ""
 
 #: src/gtk/preferences.ui:102
