Revert "change "..." to "…" according to HIG"
This reverts commit e29e06f369aa2afe6709e6df929784272e107d74.

--- a/po/de.po
+++ b/po/de.po
@@ -279,7 +279,7 @@ msgid "Volume: "
 msgstr "Lautstärke: "
 
 #: src/ui/window.vala:59
-msgid "Loading…"
+msgid "Loading..."
 msgstr "Wird geladen …"
 
 #: src/ui/window.vala:518
