--- a/po/sv.po
+++ b/po/sv.po
@@ -214,5 +214,5 @@ msgid "Unknown Artist"
 msgstr "Okänd artist"
 
 #: src/window.vala:49
-msgid "Loading…"
-msgstr "Hämtar…"
+msgid "Loading..."
+msgstr "Hämtar..."
