--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -289,7 +289,7 @@ msgid "Volume: "
 msgstr "音量："
 
 #: src/ui/window.vala:59
-msgid "Loading…"
+msgid "Loading..."
 msgstr "正在加载…"
 
 #: src/ui/window.vala:526
