--- a/po/es.po
+++ b/po/es.po
@@ -6,7 +6,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: g4music\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-06-25 19:20+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
@@ -97,6 +97,10 @@ msgid "Background blur mode"
 msgstr "Modo de blur de fondo"
 
 #: src/gtk/preferences.ui:33
+msgid "Compact playlist view"
+msgstr "Playlist compacta"
+
+#: src/gtk/preferences.ui:33
 msgid "Music Location"
 msgstr "Localizacion de la Musica"
 
@@ -104,9 +108,13 @@ msgstr "Localizacion de la Musica"
 msgid "Load music from folder"
 msgstr "Cargar musica desde carpeta"
 
+#: src/gtk/preferences.ui:65
+msgid "Monitor local file changes"
+msgstr "Monitorear cambios de archivos locales"
+
 #: src/gtk/preferences.ui:47
 msgid "Load thumbnails for non-local files"
-msgstr "cargar miniatura de archivos no-locales"
+msgstr "Cargar miniatura de archivos no-locales"
 
 #: src/gtk/preferences.ui:48
 msgid "May cause slowdowns and excess network usage"
@@ -124,6 +132,14 @@ msgstr "Seguir reproduciendo despues de cerrar la ventana"
 msgid "Show audio peak level"
 msgstr "Mostrar pico de nivel de audio"
 
+#: src/gtk/preferences.ui:102
+msgid "Display characters"
+msgstr "Mostrar Caracteres"
+
+#: src/gtk/preferences.ui:115
+msgid "Rotate album cover"
+msgstr "Rotar portada del album"
+
 #: src/gtk/preferences.ui:86
 msgid "Enable gapless playback"
 msgstr "Activar reproduccion sin interrupciones"
@@ -132,13 +148,9 @@ msgstr "Activar reproduccion sin interrupciones"
 msgid "Normalize volume with ReplayGain"
 msgstr "Usar ReplayGain para normalizar el volumen"
 
-#: src/gtk/preferences.ui:108
-msgid "Use pipewire audio sink"
-msgstr "Usar receptor de audio pipewire"
-
-#: src/gtk/preferences.ui:109
-msgid "Experimental"
-msgstr "Experimental"
+#: src/gtk/preferences.ui:143
+msgid "Prefer audio sink"
+msgstr "Receptor de audio preferido"
 
 #: src/gtk/window.ui:33
 msgid "Search"
@@ -220,6 +232,18 @@ msgstr "Seguir Reproduciendo"
 msgid "Play at Next"
 msgstr "Reproducir a la Siguiente"
 
+#: src/ui/music-entry.vala:134 src/ui/window.vala:104
+msgid "Search Title"
+msgstr "Buscar Titulo"
+
+#: src/ui/music-entry.vala:135 src/ui/window.vala:102
+msgid "Search Album"
+msgstr "Buscar Album"
+
+#: src/ui/music-entry.vala:136 src/ui/window.vala:103
+msgid "Search Artist"
+msgstr "Buscar Artista"
+
 #: src/ui/music-entry.vala:111
 msgid "Show Album"
 msgstr "Mostrar Album"
@@ -251,6 +275,10 @@ msgstr "Siempre"
 #: src/ui/preferences.vala:73
 msgid "Art Only"
 msgstr "Solo Portada"
+
+#: src/ui/preferences.vala:64
+msgid "Track"
+msgstr "Pista"
 
 #: src/ui/preferences.vala:75
 msgid "Never"
